--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,3 @@
-
-
 /* Slider */
 
 
@@ -112,7 +110,7 @@
 .list__category {
     padding-top: 24px;
     background-color: #f5f5f5;
-
+    padding-bottom: 24px;
 }
 
 .list__category-heading-wrap {
@@ -342,6 +340,47 @@ i.list__category-item__like-icon-fill {
 
 /* List category */
 
+/* Blog */
+.blog {
+    margin: 18px 0;
+}
+
+.blog__title a {
+    line-height: 40px;
+    font-size: 1.8rem;
+    display: inline-block;
+    text-decoration: none;
+    background-color: var(--primary-color);
+    color: var(--white-color);
+    padding: 0 20px 0 10px;
+    font-weight: bold;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.blog__title {
+    display: block;
+    border-bottom: solid 2px #254753;
+    margin: 0 0 10px;
+}
+
+.blog__news {
+    background-color: #fff3cd;
+    height: 52px;
+    border-radius: 4px;
+    margin-bottom: 80px;
+}
+
+.blog__news-null {
+    line-height: 52px;
+    margin: 0 22px;
+    font-size: 1.4rem;
+    color: #a38a51;
+}
+
+/* Blog */
+
+
 /* Policy */
 .policy__header {
     padding: 15px 0;
@@ -362,7 +401,7 @@ i.list__category-item__like-icon-fill {
     color: rgba(0, 0, 0);
 }
 
-.policy__header-home:hover a{
+.policy__header-home:hover a {
     color: var(--yellow-color);
 }
 
