--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -616,9 +616,10 @@ i.list__category-item__like-icon-fill {
 }
 
 /* Prodcut page */
-.main-product{
+.main-product {
     background-color: #f5f5f5;
 }
+
 .page__link {
     line-height: 24px;
     display: block;
@@ -730,11 +731,63 @@ i.list__category-item__like-icon-fill {
     font-size: 1.4rem;
 }
 
-.filter__product-item:hover{
+.filter__product-item:hover {
     background-color: var(--yellow-color);
 }
 
-.product__list-item--end{
+.product__list-item--end {
     padding-bottom: 16px;
 }
+
+.page__num-list {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 0;
+    margin: 20px;
+    list-style-type: none;
+}
+
+
+.page__num {
+    height: 35px;
+    width: 35px;
+    border: solid 1px #cccaca;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    margin: 0 10px;
+    font-size: 1.2rem;
+    cursor: pointer;
+}
+
+.page__num-link {
+    text-decoration: none;
+    color: var(--black-color);
+}
+
+.page__num--active {
+    background-color: var(--yellow-color);
+}
+
+.page__num--active .page__num-link {
+    color: var(--white-color);
+
+}
+
+.page__num--arow-not--active {
+    color: #bdb6b6;
+    cursor: default;
+}
+
+.page__num:hover:not(.page__num--arow-not--active) {
+    background-color: var(--yellow-color);
+}
+
+.page__num:hover:not(.page__num--arow-not--active) .page__num-link,
+.page__num:hover:not(.page__num--arow-not--active) i {
+    color: var(--white-color);
+}
+
 /* Prodcut page */
