--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -9,15 +9,30 @@
         justify-content: center;
     }
 
-    .list__know-item-title,
-    .list__know-item-des {
-        margin-left: 30px;
+
+
+    .footer {
+        margin-bottom: 62px;
+    }
+
+    .footer__menu {
+        display: block;
     }
 }
 
 
 /* TABLET */
 @media (min-width:740px) and (max-width: 1023px) {
+
+    .footer__menu {
+        width: 100%;
+    }
+
+    .footer__menu-item {
+        padding: 0 26px;
+    }
+
+
     .hide-on-tablet {
         display: none;
     }
@@ -106,11 +121,19 @@
     .contact__page-row {
         height: 800px;
     }
+
+    .list__know-item-title,
+    .list__know-item-des {
+        margin-left: 30px;
+    }
+
+
 }
 
 
 /* MOBILE */
 @media (max-width: 739px) {
+
     .show-on-mobile {
         display: block;
         line-height: 28px;
@@ -140,12 +163,15 @@
         top: 38px;
     }
 
-    .header__search {
+    /* .header__search {
         position: absolute;
         bottom: 0;
         width: 100%;
         top: 55%;
         right: -37px;
+    } */
+    .header__search {
+        margin-left: 16px;
     }
 
     .slider__des-new {
@@ -234,7 +260,7 @@
     }
 
     .slider__des {
-        top: 27%;
+        top: 25%;
         left: 5%;
     }
 
@@ -277,5 +303,14 @@
 
     .contact__page-row {
         height: 800px;
+    }
+
+    .list__know-item-title,
+    .list__know-item-des {
+        margin-left: 20px;
+    }
+
+    .modal__container{
+        width: 100%;
     }
 }
